# repro_dotnet_ef

./: .gitignore  NUGET.bzl  WORKSPACE
dotnet_ef/: BUILD.bazel  Data.cs  Program.cs  Startup.cs  dotnet_ef.csproj
dotnet_ef/Properties/: launchSettings.json
